src/_tailwind/components/default.css
* { @apply wrap-break-word; }
img { @apply inline-block my-default; }
main a, footer a { @apply text-accent dark:text-accent-dark underline; }
main p { @apply my-default; }
hr { @apply block my-double; }
strong { @apply text-heading dark:text-heading-dark; }
mark { @apply px-[calc(var(--spacing-half)/2)] bg-accent text-base dark:bg-accent-dark dark:text-base-dark; }

ul, ol { @apply list-outside ml-double sm:ml-triple; }
ul { @apply list-disc; }
ol { @apply list-decimal; }
li { @apply not-first:mt-half; }
li::marker { @apply text-heading; }
.darkmode li::marker { @apply text-heading-dark; } /* Must apply .darkmode styling manually for ::marker */

h1, h2, h3, h4, h5 { @apply font-semibold text-heading dark:text-heading-dark; }
h1 { @apply text-step-4; }
h2 { @apply text-step-3; }
h3, h4, h5 { @apply text-step-2; }

.anchor-heading { @apply flex items-center gap-half mt-double; }
.anchor-heading>.anchor { @apply text-step-2; }

pre { @apply grid overflow-auto my-default py-default border-dashed border border-fg dark:border dark:border-highlight-dark; }
pre>code { @apply p-0 bg-transparent leading-code text-step-0 md:text-step-1; }
code { @apply py-0.5 px-1.5 leading-none rounded-sm bg-highlight dark:bg-highlight-dark font-mono text-step-0; }

blockquote { @apply my-default px-default py-half bg-highlight dark:bg-highlight-dark; }
blockquote cite { @apply block mt-2 w-fit before:content-['—'] before:mr-2; }

table { @apply table-auto border-collapse w-full my-double; }
table, th, td { @apply border border-dashed border-fg dark:border-fg-dark; }
th, td { @apply p-half; }
th { @apply bg-highlight dark:bg-highlight-dark; }

