Fix overflow-wrap for headings, align anchor to start

--- a/src/_tailwind/components/default.css
+++ b/src/_tailwind/components/default.css
@@ -13,12 +13,12 @@ li { @apply not-first:mt-half; }
 li::marker { @apply text-heading; }
 .darkmode li::marker { @apply text-heading-dark; } /* Must apply .darkmode styling manually for ::marker */
 
-h1, h2, h3, h4, h5 { @apply font-semibold text-heading dark:text-heading-dark; }
+h1, h2, h3, h4, h5 { @apply font-semibold wrap-anywhere text-heading dark:text-heading-dark; }
 h1 { @apply text-step-4; }
 h2 { @apply text-step-3; }
 h3, h4, h5 { @apply text-step-2; }
 
-.anchor-heading { @apply flex items-center gap-half mt-double; }
+.anchor-heading { @apply flex items-start gap-half mt-double; }
 .anchor-heading>.anchor { @apply text-step-2; }
 
 pre { @apply grid overflow-auto my-default py-default border-dashed border border-fg dark:border dark:border-highlight-dark; }
